<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.pmf.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.pmf.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.pmf.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_ingredient"
        android:name="com.example.pmf.ui.ingredient.IngredientFragment"
        android:label="@string/title_ingredient"
        tools:layout="@layout/fragment_ingredient" />

    <fragment
        android:id="@+id/notificationSettingFragment"
        android:name="com.example.pmf.ui.setting.elements.NotificationSettingFragment"
        android:label="알림 설정"
        tools:layout="@layout/fragment_notification_setting" />

</navigation>